# RAG-FastAPI

./: .env.example  .gitignore  .pre-commit-config.yaml  =1.1.2  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
data/documents/: .gitkeep
rag_venv/: pyvenv.cfg
rag_venv/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py  pygrun  runxlrd.py  vba_extract.py
scripts/: test_gpu_diagnostics.py
src/rag_service/: __init__.py  __main__.py  config.py  dependencies.py  main.py
src/rag_service/api/: __init__.py
src/rag_service/api/v1/: router.py
src/rag_service/api/v1/endpoints/: __init__.py  health.py  ingest.py  models.py  query.py
src/rag_service/api/v1/schemas/: __init__.py  ingest.py  models.py  query.py
src/rag_service/cli/: __init__.py  clean_commands.py  commands.py  dev_commands.py  docker_commands.py  install_commands.py  main.py  utils.py
src/rag_service/core/: async_utils.py  chunker.py  chunker_3gpp.py  crash_logger.py  embeddings.py  exceptions.py  gpu_crash_logger.py  gpu_diagnostics.py  gpu_optimizer.py  gpu_power.py  gpu_utils.py  graph_extractor.py  logging.py  reranker.py  retriever.py  router.py  stats.py  system_diagnostics.py  telemetry.py
src/rag_service/infrastructure/: __init__.py  cache.py  chroma_store.py  faiss_store.py  neo4j_store.py
src/rag_service/middleware/: __init__.py  correlation.py
src/rag_service/ui/: __init__.py  app.py
tests/: conftest.py
tests/docker/: Dockerfile.linux-test  README.md  docker-compose.test.yml  run-local-ci.ps1  run-local-ci.sh
tests/integration/: test_api.py
tests/unit/: test_api_endpoints.py  test_chunker.py  test_chunker_3gpp.py  test_database_coverage.py  test_embeddings.py  test_graph_extractor.py  test_graph_store.py  test_model_search.py  test_reranker.py  test_router.py  test_ui.py  test_vector_stores.py
tests/unit/cli/: test_cli.py
